--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <name>Sonatype Nexus Snapshots</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
+        <site>
+            <id>gh-pages</id>
+            <name>Thymeleaf Layout Dialect GitHub Pages</name>
+            <url>git:ssh://git@github.com/zhanhb/thymeleaf-layout-dialect.git?gh-pages#</url>
+        </site>
     </distributionManagement>
 
     <properties>
@@ -384,6 +389,7 @@
                     <links>
                         <link>http://www.thymeleaf.org/apidocs/thymeleaf/${thymeleaf.version}/</link>
                     </links>
+                    <outputDirectory>${project.build.directory}/site/apidocs</outputDirectory>
                 </configuration>
             </plugin>
             <plugin>
@@ -402,6 +408,31 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.5.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-descriptor</id>
+                        <goals>
+                            <goal>attach-descriptor</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.trajano.wagon</groupId>
+                        <artifactId>wagon-git</artifactId>
+                        <version>2.0.4</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.maven.skins</groupId>
+                        <artifactId>maven-fluido-skin</artifactId>
+                        <version>1.5</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.maven.wagon</groupId>
+                        <artifactId>wagon-ssh</artifactId>
+                        <version>2.10</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
