--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
     <groupId>com.github.zhanhb</groupId>
     <artifactId>thymeleaf-layout-dialect</artifactId>
     <version>2.4.2.BUILD-SNAPSHOT</version>
+    <packaging>bundle</packaging>
     <name>Thymeleaf Layout Dialect</name>
     <description>Thymeleaf Layout Dialect rewritten in java.</description>
     <url>https://github.com/zhanhb/thymeleaf-layout-dialect</url>
@@ -344,6 +345,29 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>4.2.0</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>bundle-manifest</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>manifest</goal>
+                        </goals>
+                        <configuration>
+                            <instructions>
+                                <Export-Package>!nz.net.ultraq.thymeleaf.internal,
+                                    nz.net.ultraq.thymeleaf.expressions;version=1.1.3,
+                                    nz.net.ultraq.thymeleaf.*</Export-Package>
+                                <Bundle-DocURL>https://github.com/zhanhb/thymeleaf-layout-dialect/</Bundle-DocURL>
+                            </instructions>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>3.1.0</version>
@@ -404,6 +428,7 @@
                             <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                         </manifest>
                         <manifestEntries>
+                            <Automatic-Module-Name>nz.net.ultraq.thymeleaf</Automatic-Module-Name>
                             <Built-By>zhanhb</Built-By>
                         </manifestEntries>
                         <manifestSections>
