--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>1.3-groovy-2.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
         </dependency>
@@ -363,7 +369,7 @@
                         <configuration>
                             <instructions>
                                 <Export-Package>!nz.net.ultraq.thymeleaf.internal,
-                                    nz.net.ultraq.thymeleaf.expressions;version=1.1.3,
+                                    nz.net.ultraq.thymeleaf.expressions;version=1.2.0,
                                     nz.net.ultraq.thymeleaf.*</Export-Package>
                                 <Bundle-DocURL>https://github.com/zhanhb/thymeleaf-layout-dialect/</Bundle-DocURL>
                             </instructions>
@@ -440,9 +446,9 @@
                                 <name>nz/net/ultraq/thymeleaf/expressions/</name>
                                 <manifestEntries>
                                     <Implementation-Title>Thymeleaf Expression Processor</Implementation-Title>
-                                    <Implementation-Version>1.1.3</Implementation-Version>
+                                    <Implementation-Version>1.2.0</Implementation-Version>
                                     <Specification-Title>Thymeleaf Expression Processor</Specification-Title>
-                                    <Specification-Version>1.1.3</Specification-Version>
+                                    <Specification-Version>1.2.0</Specification-Version>
                                 </manifestEntries>
                             </manifestSection>
                         </manifestSections>
